2007-03-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	*** APPLY FOR rails1.2 ***
	* Many files are changed to apply rails1.2.
	* donrails/app/models/category.rb (Category): Add name validator. You can not add numeral only category name.

2007-03-20  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/shared/MT/module-titlelist.rhtml:
	  Fix a javascript to get it working properly.

	* donrails/app/models/article.rb (send_pings2): rescue all exceptions.

2007-03-17  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/rdf/rss2_category.rxml: Change time entity from 'dc:date' to 'pubDate'.

	* donrails/app/views/rdf/*.rxml: Fix wrong link.

	* donrails/app/views/notes/show_category.rhtml: Change link address. Because when 'category name' is not ascii letters, link_to make a missing link.
	* donrails/app/views/notes/default/noteslist.rhtml: likewise.
	* donrails/test/integration/cache_test.rb: Change to apply for it.
	* donrails/app/models/article_sweeper.rb: likewise.
	* donrails/app/controllers/rdf_controller.rb: likewise.
	* donrails/app/controllers/notes_controller.rb: likewise.
	* donrails/config/routes.rb: likewise.

2007-03-15  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/tables-mysql.sql: Fix. (BLOB and TEXT columns cannot have DEFAULT values.)
	* donrails/tool/tables-postgresql.sql: likewise.

	* donrails/test/unit/don_attachment_test.rb: New. (TODO: test for some methods )
	
	* patch from akira yamada (at Mar. 10 and 13)
	
2007-03-11  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb 
	(DonAttachment::filesave_internal): Change: no use Dir.pwd.
	(DonAttachment::filedump_name): Change to use inputted filename.

	* donrails/app/views/shared/edit_don_env.rhtml: Add small message.

	* donrails/tool/tables-{mysql,postgresql}.sql: Set default value in DonEnv.image_dump_path.

	* donrails/test/fixtures/don_envs.yml: Change in image_dump_path.

	* donrails/app/controllers/login_controller.rb: Fix: removed duplicate methods.
	