@@ -25,10 +25,10 @@ ActionController::Routing::Routes.draw do |map|
 
   map.connect "archives/show_category_noteslist/:category", 
   :controller => "notes", :action => "show_category_noteslist", 
-  :page => '1', :requirements => {:category => /\D+\w*/}
+  :page => '1', :requirements => {:category => /\w+/}
   map.connect "archives/show_category_noteslist/:category/page/:page", 
   :controller => "notes", :action => "show_category_noteslist", 
-  :requirements => {:category => /\D+\w*/, :page => /\d+/}
+  :requirements => {:category => /\w+/, :page => /\d+/}
 
   map.connect "archives/:year/:month/:day", :controller => "notes", 
   :action => "show_date",
